Loading comics for char and chars for comic Plus loading spinners

--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".modules.main.MainActivity"/>
-        <activity android:name=".modules.detail.CharacterDetailActivity"/>
+        <activity android:name=".modules.detail.DetailActivity"/>
 
 
     </application>
