--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".modules.main.MainActivity"/>
+        <activity android:name=".modules.main.MainActivity"  android:windowSoftInputMode="stateHidden|adjustResize|adjustPan" />
         <activity android:name=".modules.detail.DetailActivity"/>
 
 
