--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.udacity.capstone">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.udacity.capstone">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -12,23 +11,36 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".modules.onboarding.LaunchActivity"
-            android:label="@string/title_activity_main"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
-        <activity android:name=".modules.onboarding.OnboardingActivity" />
-        <activity android:name=".modules.auth.LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".modules.main.MainActivity"  android:windowSoftInputMode="stateHidden|adjustResize|adjustPan" />
-        <activity android:name=".modules.detail.DetailActivity"/>
 
+        <activity android:name=".modules.onboarding.OnboardingActivity" />
+        <activity android:name=".modules.auth.LoginActivity" />
+        <activity android:name=".modules.main.MainActivity" android:windowSoftInputMode="stateHidden|adjustResize|adjustPan" />
+        <activity android:name=".modules.detail.DetailActivity" />
+        <activity android:name=".modules.settings.SettingsActivity" android:parentActivityName=".modules.main.MainActivity"/>
+
+        <receiver android:name=".widget.AppWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/app_widget_info" />
+        </receiver>
+
+        <service android:name=".widget.RemoteViewsAdapter"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
 
     </application>
 
